--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@mui/material-nextjs": "^6.4.3",
     "googleapis": "^146.0.0",
+    "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
