--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.6",
     "@mui/material-nextjs": "^6.4.3",
+    "@mui/x-charts": "^7.27.1",
     "googleapis": "^146.0.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
