--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@mui/material": "^6.4.6",
     "@mui/material-nextjs": "^6.4.3",
     "@mui/x-charts": "^7.27.1",
+    "@next/third-parties": "^15.2.1",
     "googleapis": "^146.0.0",
     "lucide-react": "^0.477.0",
-    "next": "15.2.0",
+    "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
