--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "@mui/material-nextjs": "^6.4.3",
     "@mui/x-charts": "^7.27.1",
     "@next/third-parties": "^15.2.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "googleapis": "^146.0.0",
     "lucide-react": "^0.477.0",
     "next": "^15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
