--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "googleapis": "^146.0.0",
     "lucide-react": "^0.477.0",
     "next": "^15.2.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.2",
     "tailwind-merge": "^3.0.2",
@@ -41,6 +41,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
     "@types/recharts": "^1.8.29",
     "eslint": "^9",
