--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
-    "@mui/material": "^6.4.6",
+    "@mui/material": "^6.4.11",
     "@mui/material-nextjs": "^6.4.3",
     "@mui/x-charts": "^7.27.1",
+    "@mui/x-date-pickers": "^8.2.0",
     "@next/third-parties": "^15.2.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.4",
@@ -24,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "googleapis": "^146.0.0",
     "lucide-react": "^0.477.0",
     "next": "^15.2.1",
